Fix spacing issues on about page

--- a/src/components/About/Skills/styles/styles.css
+++ b/src/components/About/Skills/styles/styles.css
@@ -3,7 +3,6 @@
   max-width: 800px;
   width: 80%;
   margin: 0 auto;
-  padding-bottom:4rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -15,7 +14,7 @@
 
 .skills li {
   color: #fefae0;
-  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .icon {
@@ -26,7 +25,7 @@
 @media only screen and (max-width: 500px) {
   .skills {
     font-size: 0.9rem;
-    margin: 3rem auto;
+    margin: 2rem auto;
   }
 }
 
